# RoutePlanner

./: .env.example  .gitignore  README.en.md  README.md  main.py  parcours_paris.html  pyproject.toml  pytest.ini  requirements.txt  route_planner.py  vehicule.py
.github/workflows/: tests.yml
exporters/: html_exporter.py
routers/: factory.py  interface.py  osrm_router.py
src/route_planner/: __init__.py  cache.py  cli.py  config.py  main.py  models.py  route_planner.py  vehicule.py  webapp.py
src/route_planner/ai/: __init__.py  factory.py  models.py  service.py
src/route_planner/ai/providers/: __init__.py  anthropic_provider.py  interface.py  openai_provider.py
src/route_planner/exporters/: __init__.py  html_exporter.py  json_exporter.py  pdf_exporter.py  travel_guide_exporter.py
src/route_planner/optimization/: __init__.py  heuristics.py
src/route_planner/recommendations/: __init__.py  categories.py  models.py  service.py
src/route_planner/recommendations/providers/: __init__.py  (+2 more)
src/route_planner/routers/: factory.py  http_routers.py  interface.py  osmnx_router.py  osrm_router.py
tests/: conftest.py  test_cache.py  test_config.py  test_optimization.py  test_pdf_exporter.py  test_route_planner.py  test_vehicule.py  test_webapp.py
tests/test_ai/: conftest.py  test_factory.py  test_models.py  test_service.py
tests/test_exporters/: test_html_exporter.py  test_travel_guide_exporter.py
tests/test_recommendations/: test_categories.py  test_overpass.py  test_service.py
tests/test_routers/: test_factory.py  test_http_routers.py  test_osrm_router.py
