[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "route-planner"
version = "0.6.0"
description = "Flexible route planner with dynamic routing engine selection (OSRM, OSMnx, ...) and POI recommendations."
authors = [
    { name="Romain Berthet", email="berthet.romain3@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "requests",
    "geopy",
    "folium",
    "osmnx",
    "geopandas",
    "python-dotenv"
]

[project.optional-dependencies]
anthropic = ["anthropic"]
openai = ["openai"]
ai = ["anthropic", "openai"]

[project.scripts]
route-planner = "route_planner.cli:main"
route-planner-web = "route_planner.webapp:main"
